[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gridworld"
version = "0.1.0"
description = "Simple GridWorld OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pydantic",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools.packages.find]
include = ["server*"]
